2001-10-15 09:15 GMT+3 Alexander Kresin <alex@belacy.belgorod.su>
  ! source/pp/pptable.c
     * Warning fixed

2001-10-12 12:44 GMT-3 Horacio Roldan <harbour_ar@yahoo.com.ar>
   * source/rdd/dbfcdx/dbfcdx1.c
     ! fixed updating keys with trailing spaces
     * added support for conditional indexes (creation and updating)

2001-10-11 23:05 GMT+1 JFL (mafact) <jfl@mafact.com>
   * harbour/source/vm/classes.c
   * harbour/source/vm/hvm.c
     * Changed the way I allocate/reallocate and xfree 'puiClstree' pointer
       to solve unreleased memory blocks ...

2001-10-11 21:45 GMT+3 Alexander Kresin <alex@belacy.belgorod.su>
  ! source/pp/pptable.c
     * Rule corrected

2001-10-10 23:50 GMT+1 JFL (mafact) <jfl@mafact.com>
   * harbour/source/vm/classes.c
       Fixed hb_clsIsParent for same class as parent ...
       (xBase++ compatibility)

2001-10-10 10:07 GMT Dave Pearson <davep@davep.org>
   * source/rtl/tbrowse.prg
     * Fixed bug in :insColumn() as reported by Andreas Moroder in 
       <URL:news:comp.lang.clipper>.
	
2001-10-08 21:30 GMT -3 Luiz Rafael Culik<culik@sl.conex.net>
  *source/rtl/isprint.c
   contrib/libct/files.c
   ! Cygwin fixes.
   *contrib/hbzlib/zipnew.cpp
   contrib/hbzlib/zipcomp.cpp
   contrib/hbzlib/zip.c
   contrib/hbzlib/hbzip2.h
     * Added new functions
     * Now is possible to create zipfiles in memory
   *contrib/libct/makefile.bc
     * added files.c to makefile

2001-10-08 23:12 GMT+3 Alexander Kresin <alex@belacy.belgorod.su>
  ! source/rdd/dbf1.c
  ! source/rdd/workarea.c
    * relations implemented for RDD's, inherited from DBF ( DBFNTX AND DBFCDX )

2001-10-06 15:28 GMT+3 Alexander Kresin <alex@belacy.belgorod.su>
  ! source/rdd/dbfntx/dbfntx1.c
    ! Few fixes

2001-10-05 23:12 GMT+3 Alexander Kresin <alex@belacy.belgorod.su>
  ! source/rdd/dbf1.c
    ! hb_dbfRecall() fixed

2001-10-04 17:10 UTC-0400 David G. Holm <dholm@jsd-llc.com>

  * doc/gmake.txt
  * source/rtl/filesys.c
  * source/rtl/idle.c
  	! Cygwin fixes.
