@@ -1,3 +1,11 @@
+2001-10-18 22:10 GMT -3 Luiz Rafael Culik<culik@sl.conex.net>
+*source/rtl/profiler.prg
+   * fixed an small bug: Is was looking for an internel class
+    start with HB_ but the class was defined without the _
+
+*source/compiler/harbour.c
+   *added 37 functions in the _DECL section for the strong type support
+
 2001-10-15 09:15 GMT+3 Alexander Kresin <alex@belacy.belgorod.su>
   ! source/pp/pptable.c
      * Warning fixed
